<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="petSleuthViewModel"
            type="com.sharonahamon.petsleuth.PetSleuthViewModel" />
    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".LoginFragment">

        <!-- constraint layout needed to make elements on the screen adapt to viewport size and orientation -->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/login_body_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/layout_margin24"
            app:layout_constraintTop_toBottomOf="@+id/app_toolbar">

            <TextView
                android:id="@+id/login_username_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:height="50dp"
                android:text="@string/login_email_prompt"
                android:textColor="@color/colorPrimaryText"
                android:textSize="@dimen/text_size_normal"
                app:layout_constrainedHeight="false"
                app:layout_constraintStart_toStartOf="@+id/login_body_container"
                app:layout_constraintTop_toTopOf="@+id/login_body_container" />

            <EditText
                android:id="@+id/login_username_text"
                android:layout_width="@dimen/input_field_width"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:height="60dp"
                android:autofillHints="@string/login_email_prompt"
                android:hint="@string/login_email_prompt"
                android:inputType="textEmailAddress"
                android:selectAllOnFocus="true"
                android:text=""
                android:textColorHint="@color/colorHintText"
                app:layout_constraintEnd_toEndOf="@+id/login_body_container"
                app:layout_constraintStart_toEndOf="@+id/login_username_label"
                app:layout_constraintTop_toTopOf="@+id/login_body_container" />

            <TextView
                android:id="@+id/login_password_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:height="50dp"
                android:text="@string/login_password_prompt"
                android:textColor="@color/colorPrimaryText"
                android:textSize="@dimen/text_size_normal"
                app:layout_constraintStart_toStartOf="@+id/login_body_container"
                app:layout_constraintTop_toBottomOf="@+id/login_username_label" />

            <EditText
                android:id="@+id/login_password_text"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:height="60dp"
                android:autofillHints="@string/login_password_prompt"
                android:hint="@string/login_password_prompt"
                android:inputType="textPassword"
                android:selectAllOnFocus="true"
                android:text=""
                android:textColorHint="@color/colorHintText"
                app:layout_constraintEnd_toEndOf="@+id/login_body_container"
                app:layout_constraintStart_toEndOf="@+id/login_password_label"
                app:layout_constraintTop_toBottomOf="@+id/login_username_text" />

            <!-- linear layouts used to create containers to group elements together -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                app:layout_constraintTop_toBottomOf="@+id/login_password_text">

                <Button
                    android:id="@+id/login_button_signin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:enabled="true"
                    android:text="@string/login_button_signin_label"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

                <Button
                    android:id="@+id/login_button_register"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/login_button_register_label"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </FrameLayout>

</layout>