<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="petSleuthViewModel"
            type="com.sharonahamon.petsleuth.PetSleuthViewModel" />
    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ListItemFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/list_item_body_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/layout_margin24">

            <TextView
                android:id="@+id/list_item_instructions"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/list_item_instructions"
                android:textAlignment="textStart"
                android:textColor="@color/colorPrimaryText"
                android:textSize="@dimen/text_size_normal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:id="@+id/list_item_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/list_item_instructions">

                <LinearLayout
                    android:id="@+id/list_item_image_container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/layout_margin48"
                    android:orientation="horizontal"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <ImageView
                        android:id="@+id/list_item_image"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/list_item_image_text"
                        android:src="@mipmap/ic_launcher"
                        tools:src="@tools:sample/avatars" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/list_item_date_value"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/layout_margin24"
                            android:layout_marginEnd="@dimen/layout_margin24"
                            android:gravity="start"
                            android:text="@{petSleuthViewModel.pet.petSummary.lastSeenLocation.lastSeenDate.toString()}"
                            android:textColor="@color/colorPrimaryText"
                            android:textSize="@dimen/text_size_normal" />

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <TextView
                                android:id="@+id/list_item_status_value"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="@dimen/layout_margin24"
                                android:gravity="start"
                                android:text="@{petSleuthViewModel.pet.petSummary.status.toString()}"
                                android:textColor="@color/colorPrimaryText"
                                android:textSize="@dimen/text_size_normal" />

                            <TextView
                                android:id="@+id/list_item_species_value"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="start"
                                android:layout_marginLeft="@dimen/layout_margin4"
                                android:gravity="start"
                                android:text="@{petSleuthViewModel.pet.petSummary.species.toString()}"
                                android:textColor="@color/colorPrimaryText"
                                android:textSize="@dimen/text_size_normal" />

                        </LinearLayout>

                        <TextView
                            android:id="@+id/list_item_location_value"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/layout_margin24"
                            android:gravity="start"
                            android:text="@{petSleuthViewModel.pet.petSummary.lastSeenLocation.city.toString() + ' ' + petSleuthViewModel.pet.petSummary.lastSeenLocation.state.toString() + ' ' + petSleuthViewModel.pet.petSummary.lastSeenLocation.zip.toString()}"
                            android:textColor="@color/colorPrimaryText"
                            android:textSize="@dimen/text_size_normal" />

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

            <Button
                android:id="@+id/list_item_button_done"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:enabled="true"
                android:text="@string/list_item_button_done_label"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/list_item_container" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </FrameLayout>
</layout>